--- a/public/navigation/information_account.html
+++ b/public/navigation/information_account.html
@@ -836,6 +836,8 @@
         </div>
     </div>
     <div class="nen_mo"></div>
+    <script src="/socket.io/socket.io.js"></script>
+
     <script type="module" src="../src/toast.js"></script>
     <script src="../navigation_javascript/menuv2.js"></script>
     <script type="module" src="../src/client.js"></script>
