--- a/public/navigation/information_card_TS.html
+++ b/public/navigation/information_card_TS.html
@@ -894,7 +894,7 @@
                     </button>
                 </form>
             </div>
-            <div class="modal__body__box register-cart">
+            <!-- <div class="modal__body__box register-cart">
                 <form id="form-register" class="form1">
                     <div class="registration__traning__schedule">
                         <div class="table">
@@ -1029,7 +1029,7 @@
                         </div>
                     </div>
                 </form>
-            </div>
+            </div> -->
 
             <div class="modal__body__box change-box">
                 <p class="edit-title">Đổi tên khách hàng</p>
@@ -1065,6 +1065,8 @@
         </div>
     </div>
     <div class="nen_mo"></div>
+    <script src="/socket.io/socket.io.js"></script>
+
     <script src="../navigation_javascript/menuv2.js"></script>
     <script type="module" src="../src/toast.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
